# xml-pretty

./: README.md  print_pretty.py  pyproject.toml
tests/: test_xml_pretty.py
xml_pretty/: __init__.py
